# LangchainLearning

./: .gitignore  docker-compose.yml  main.py  pyproject.toml
Note/: 01_采用 openai sdk 调用llm.md  02_ollama本地部署llm.md  03_PromptEngineering.md  04_Langchain.md
Practice/: 01_采用openai调用llm.py
Practice/01_OpenaiSdk2llm/: 01_采用openai调用llm.py  02_ollama本地部署.py
Practice/02_PromptEngineering/: 03_case2_金融信息提取.py  04_case3_金融文本匹配.py
Practice/03_Langchain/01_Model/: 02_ChatModel.py  03_EmbeddingModel.py
Practice/03_Langchain/02_Prompt/: 02_ChatPromptTemplate.py
Practice/03_Langchain/03_Chain/: 01_chain_basic.py  02_OutputParser_StrOutputParser.py  03_OutputParser_JsonOutputParser.py  04_chain_RunnableLambda.py
Practice/03_Langchain/04_Memory/: 01_history_short_storage.py  02_history_long_storage.py
Practice/03_Langchain/04_Memory/chat_history/: user01_001.json
Practice/03_Langchain/05_Document_loader.py/: 01_CSVLoader.py  02_JSONLoader.py  03_PDFLoader.py  04_TextLoader&Splitter.py
Practice/03_Langchain/05_Document_loader.py/data/: csv_loader.csv  json_loader_json.json  (+2 more)
Practice/03_Langchain/06_VectorStore/: 01_Qdrant.py  02_VectorStore_by_Qdrant.py
Practice/03_PromptEngineering/: 01_case1_金融文本分类.py  02_json数据格式.py
Practice/04_Langchain/01_Model/: 01_LLMs.py
Practice/04_Langchain/02_Prompt/: 01_PromptTemplate.py  03_MessagesPlaceholder.py
case/RagCase/: app.py  app_file_uploader.py  config_data.py  file_history_store.py  knowledge_base.py  rag.py  readme.md  vector_store.py
case/RagCase/chroma_db/: chroma.sqlite3
qdrant_storage/: raft_state.json
