[project]
name = "langchainlearning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "dashscope>=1.25.17",
    "dotenv>=0.9.9",
    "langchain>=1.2.17",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.1",
    "openai>=2.35.1",
    "requests>=2.33.1",
]
